# flutter_admin_template

./: readme.md
fat_auth/: Cargo.toml
fat_auth/src/user_service/: auth.rs  mod.rs  tests.rs  user_info.rs  user_service.rs
fat_macros/: Cargo.toml
fat_macros/src/: lib.rs
flutter_admin_template_backend/: Cargo.toml  config.toml  db_config.toml  flutter_admin_template.sql  readme.md
flutter_admin_template_backend/src/: main.rs
flutter_admin_template_backend/src/common/: auth.rs  base_response.rs  hash.rs  mod.rs  regex.rs  tests.rs
flutter_admin_template_backend/src/constants/: mod.rs
flutter_admin_template_backend/src/controllers/: api_controller.rs  config_controller.rs  department_controller.rs  log_controller.rs  mod.rs  role_controller.rs  router_controller.rs  user_controller.rs  user_login_controller.rs
flutter_admin_template_backend/src/database/: get_api_auth.rs  init.rs  load_config.rs  mod.rs  refresh_token.rs  tests.rs  validate_token.rs
flutter_admin_template_backend/src/middleware/: auth.rs  mod.rs  refresh_token.rs  reject_request.rs
flutter_admin_template_backend/src/models/: api.rs  department.rs  mod.rs  role.rs  router.rs  sign_in_record.rs  sys_config.rs  sys_dict.rs  user.rs  user_login.rs
flutter_admin_template_backend/src/routers/: api.rs  department.rs  log.rs  mod.rs  role.rs  router.rs  user.rs  user_login.rs
flutter_admin_template_backend/src/services/: api_service.rs  department_service.rs  log_service.rs  mod.rs  query_params.rs  role_service.rs  router_service.rs  sys_config_service.rs  sys_dict_service.rs  tests.rs  user_login_service.rs  user_service.rs
flutter_admin_template_backend/src/websocket/: connection.rs  controller.rs  message.rs  mod.rs  server.rs
flutter_admin_template_frontend/: README.md  pubspec.yaml
flutter_admin_template_frontend/lib/: apis.dart  main.dart  (+1 more)
(+119 files in other folders)
