[package]
name = "fat_auth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib","staticlib","cdylib",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.68"
fat_macros ={ path = "../fat_macros"}

[dev-dependencies]
tokio = { version = "1.30.0", features = ["full"] }