[package]
name = "flutter_admin_template_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0"
lazy_static = "*"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
toml = "*"