[package]
name = "flutter_admin_template_backend"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4"
actix-web-actors = "4.2.0"
async-trait = "0.1.68"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
futures-util = "0.3.28"
gm-sm3 = "0.10.0"
hex = "0.4.0"
lazy_static = "*"
redis = { version = "0.23.0", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
toml = "*"
validator = { version = "0.15", features = ["derive"] }
